--- a/cost-of-prefab-home-canada/index.html
+++ b/cost-of-prefab-home-canada/index.html
@@ -179,86 +179,86 @@
 
   <main id="main">
     <!-- HERO -->
-    <section class="hero">
-      <div class="wrap hero-grid">
-        <div class="hero-card">
-          <span class="kicker">Canada-first • 2026</span>
-          <h1 class="hero-title">Cost of a Prefab Home in Canada (2026)</h1>
+<section class="hero">
+  <div class="wrap hero-grid" style="align-items:flex-start;">
+    <div class="hero-card" style="align-self:flex-start; margin-top:-28px;">
+      <span class="kicker">Canada-first • 2026</span>
+      <h1 class="hero-title">Cost of a Prefab Home in Canada (2026)</h1>
 
-          <p class="hero-sub">
-            Most “prefab home price” conversations start and end with the listing price. In Canada, that’s rarely the real budget.
-            This page explains the installed-cost drivers: delivery and offload, foundations, permits, utilities, plumbing/electrical,
-            insulation upgrades, and winterization. Use it to plan realistically and avoid expensive surprises.
-            <strong>Also browsing models?</strong> Start with our
-            <a href="/best-prefab-homes-canada/">Top 7 prefab homes on Amazon Canada</a>,
-            then use this cost guide to sanity-check your real installed budget.
-          </p>
+      <p class="hero-sub">
+        Most “prefab home price” conversations start and end with the listing price. In Canada, that’s rarely the real budget.
+        This page explains the installed-cost drivers: delivery and offload, foundations, permits, utilities, plumbing/electrical,
+        insulation upgrades, and winterization. Use it to plan realistically and avoid expensive surprises.
+        <strong>Also browsing models?</strong> Start with our
+        <a href="/best-prefab-homes-canada/">Top 7 prefab homes on Amazon Canada</a>,
+        then use this cost guide to sanity-check your real installed budget.
+      </p>
 
-          <div class="pillrow" aria-label="Key points">
-            <span class="pill2">Installed-cost mindset</span>
-            <span class="pill2">Canada climate realities</span>
-            <span class="pill2">Permits + documentation</span>
-            <span class="pill2">No fake totals</span>
-          </div>
-
-          <div class="cta-row">
-            <a class="btn btn-primary" href="#breakdown">Jump to cost breakdown</a>
-            <a class="btn btn-ghost" href="#scenarios">See example scenarios</a>
-          </div>
-
-          <p class="disclaimer hero-disclaimer">
-            Important: costs vary widely by province/municipality, site conditions, and what your seller actually includes.
-            Always confirm documentation (drawings/specs, electrical approvals, insulation details, and any snow-load/wind-load claims).
-            For how we evaluate recommendations, see <a href="/how-we-test/">How we test</a> and <a href="/methodology/">Methodology</a>.
-          </p>
-        </div>
-
-        <aside class="hero-media" aria-label="Page navigation">
-          <div class="media-inner">
-
-            <figure class="hero-figure" style="margin:0;">
-              <picture>
-                <source type="image/webp"
-                  srcset="/assets/images/hero/cost-of-prefab-home-canada-1600x900.webp 1600w,
-                          /assets/images/hero/cost-of-prefab-home-canada-2400x1350.webp 2400w"
-                  sizes="(max-width: 979px) 100vw, 40vw">
-                <img
-                  class="hero-img"
-                  src="/assets/images/hero/cost-of-prefab-home-canada-1600x900.webp"
-                  width="1600"
-                  height="900"
-                  alt="Modern prefab home site in Canada with realistic installation context – cost breakdown guide"
-                  loading="eager"
-                  decoding="async"
-                  fetchpriority="high"
-                  style="display:block;width:100%;height:auto;border-radius:0;">
-              </picture>
-              <figcaption class="small muted">Installed cost = listing price + site + approvals + utilities + climate upgrades.</figcaption>
-            </figure>
-
-            <nav class="tocBox toc" aria-label="On this page">
-              <p class="tocTitle" style="margin:0 0 6px; font-weight:900;">On this page</p>
-              <p class="small tocSub">Use these anchors to skip to what you need.</p>
-
-              <ul class="tocList">
-                <li><a href="#what-is-real">Why the listing price isn’t the real price</a></li>
-                <li><a href="#breakdown">Installed cost breakdown (Canada)</a></li>
-                <li><a href="#scenarios">Example scenarios (small / mid / larger)</a></li>
-                <li><a href="#checklist">Buyer checklist (before you buy)</a></li>
-                <li><a href="#faq">FAQ</a></li>
-                <li><a href="/best-prefab-homes-canada/">Best prefab homes (Top 7)</a></li>
-                <li><a href="/how-we-test/">How we test</a></li>
-                <li><a href="/methodology/">Methodology</a></li>
-                <li><a href="/disclosure/">Affiliate disclosure</a></li>
-              </ul>
-            </nav>
-
-          </div>
-        </aside>
+      <div class="pillrow" aria-label="Key points">
+        <span class="pill2">Installed-cost mindset</span>
+        <span class="pill2">Canada climate realities</span>
+        <span class="pill2">Permits + documentation</span>
+        <span class="pill2">No fake totals</span>
       </div>
-    </section>
 
-    <div class="wrap"><div class="hr-glow"></div></div>
+      <div class="cta-row">
+        <a class="btn btn-primary" href="#breakdown">Jump to cost breakdown</a>
+        <a class="btn btn-ghost" href="#scenarios">See example scenarios</a>
+      </div>
+
+      <p class="disclaimer hero-disclaimer">
+        Important: costs vary widely by province/municipality, site conditions, and what your seller actually includes.
+        Always confirm documentation (drawings/specs, electrical approvals, insulation details, and any snow-load/wind-load claims).
+        For how we evaluate recommendations, see <a href="/how-we-test/">How we test</a> and <a href="/methodology/">Methodology</a>.
+      </p>
+    </div>
+
+    <aside class="hero-media" aria-label="Page navigation" style="align-self:flex-start; margin-top:0;">
+      <div class="media-inner" style="margin-top:0;">
+
+        <figure class="hero-figure" style="margin:0;">
+          <picture>
+            <source type="image/webp"
+              srcset="/assets/images/hero/cost-of-prefab-home-canada-1600x900.webp 1600w,
+                      /assets/images/hero/cost-of-prefab-home-canada-2400x1350.webp 2400w"
+              sizes="(max-width: 979px) 100vw, 40vw">
+            <img
+              class="hero-img"
+              src="/assets/images/hero/cost-of-prefab-home-canada-1600x900.webp"
+              width="1600"
+              height="900"
+              alt="Modern prefab home site in Canada with realistic installation context – cost breakdown guide"
+              loading="eager"
+              decoding="async"
+              fetchpriority="high"
+              style="display:block;width:100%;height:auto;border-radius:0;">
+          </picture>
+          <figcaption class="small muted">Installed cost = listing price + site + approvals + utilities + climate upgrades.</figcaption>
+        </figure>
+
+        <nav class="tocBox toc" aria-label="On this page">
+          <p class="tocTitle" style="margin:0 0 6px; font-weight:900;">On this page</p>
+          <p class="small tocSub">Use these anchors to skip to what you need.</p>
+
+          <ul class="tocList">
+            <li><a href="#what-is-real">Why the listing price isn’t the real price</a></li>
+            <li><a href="#breakdown">Installed cost breakdown (Canada)</a></li>
+            <li><a href="#scenarios">Example scenarios (small / mid / larger)</a></li>
+            <li><a href="#checklist">Buyer checklist (before you buy)</a></li>
+            <li><a href="#faq">FAQ</a></li>
+            <li><a href="/best-prefab-homes-canada/">Best prefab homes (Top 7)</a></li>
+            <li><a href="/how-we-test/">How we test</a></li>
+            <li><a href="/methodology/">Methodology</a></li>
+            <li><a href="/disclosure/">Affiliate disclosure</a></li>
+          </ul>
+        </nav>
+
+      </div>
+    </aside>
+  </div>
+</section>
+
+<div class="wrap"><div class="hr-glow"></div></div>
 
     <!-- KEY TAKEAWAYS -->
     <section class="section">
