--- a/best-prefab-homes-canada/index.html
+++ b/best-prefab-homes-canada/index.html
@@ -299,10 +299,12 @@
           <h1 class="hero-title">7 Best Prefab Homes on Amazon Canada (2026 Guide)</h1>
 
           <p class="hero-sub">
-            Expandable prefab homes on Amazon can look “all-in” at first glance, but most listings are closer to a structure or shell than a move-in-ready house.
-            This guide is written for Canadian buyers who want a realistic view of what you get, what you still need, and what the installed cost can look like once you
-            factor in delivery, foundations, permits, plumbing, electrical, insulation, and winterization.
-          </p>
+  Expandable prefab homes on Amazon can look “all-in” at first glance, but most listings are closer to a structure or shell than a move-in-ready house.
+  This guide is written for Canadian buyers who want a realistic view of what you get, what you still need, and what the installed cost can look like once you
+  factor in delivery, foundations, permits, plumbing, electrical, insulation, and winterization.
+  For a step-by-step Canada-first breakdown, read our
+  <a href="/cost-of-prefab-home-canada/">Cost of a Prefab Home in Canada (2026): real installed price breakdown</a>.
+</p>
 
           <div class="pillrow" aria-label="Key points">
             <span class="pill2">No hype</span>
