--- a/best-prefab-homes-canada/index.html
+++ b/best-prefab-homes-canada/index.html
@@ -1073,6 +1073,15 @@
           is treated as a full-time dwelling or accessory structure.
         </p>
 
+        <div class="noteBox noteBox--mt10">
+  <h3 class="h3" style="margin:0 0 6px;">Real installed cost: what to budget</h3>
+  <p class="small" style="margin:0;">
+    The unit price is only one line item. If you want the full “installed cost” checklist (site work, approvals, utilities, envelope upgrades),
+    use the dedicated guide:
+    <a href="/cost-of-prefab-home-canada/">Cost of a Prefab Home in Canada (2026)</a>.
+  </p>
+</div>
+
         <div class="grid">
           <div class="card grid-span-6">
             <h3>Delivery, offload, and placement</h3>
