--- a/best-prefab-homes-canada/index.html
+++ b/best-prefab-homes-canada/index.html
@@ -1402,9 +1402,13 @@
             <p>Sometimes, but it depends on zoning and compliance documentation. Many listings are best treated as structures or shells unless proven otherwise.</p>
           </div>
           <div class="card grid-span-12">
-            <h3>What’s the biggest hidden cost?</h3>
-            <p>Site work: foundation, permits, utilities, plumbing (especially septic/well), and winterization can exceed the unit price.</p>
-          </div>
+  <h3>What’s the biggest hidden cost?</h3>
+  <p>
+    Site work: foundation, permits, utilities, plumbing (especially septic/well), and winterization can exceed the unit price.
+    For a complete Canada-first checklist, see
+    <a href="/cost-of-prefab-home-canada/">Cost of a Prefab Home in Canada (2026)</a>.
+  </p>
+</div>
           <div class="card grid-span-12">
             <h3>Do listings include a Canadian permit package?</h3>
             <p>Usually not. If you need stamped drawings or engineering, expect to hire local professionals.</p>
