--- a/cost-of-prefab-home-canada/index.html
+++ b/cost-of-prefab-home-canada/index.html
@@ -349,158 +349,158 @@
 
     <div class="wrap"><div class="sep"></div></div>
 
-    <!-- BREAKDOWN -->
-    <section id="breakdown" class="section anchor">
-      <div class="wrap">
-        <h2>Installed cost breakdown (Canada)</h2>
-        <p class="sub">
-          This section lists the common “buckets” that make up installed cost. No fake totals.
-          Use it as a checklist for quotes and seller questions.
-        </p>
+<!-- BREAKDOWN -->
+<section id="breakdown" class="section anchor">
+  <div class="wrap">
+    <h2>Installed cost breakdown (Canada)</h2>
+    <p class="sub">
+      This section lists the common “buckets” that make up installed cost. No fake totals.
+      Use it as a checklist for quotes and seller questions.
+    </p>
 
-        <div class="noteBox">
-          <h3 class="h3">Before you collect quotes, collect answers</h3>
-          <ul class="specs">
-            <li><strong>Where is the site?</strong> municipality + property type + intended use (seasonal vs. year-round).</li>
-            <li><strong>How will it be placed?</strong> slab, piers, frost wall, basement, engineered pad.</li>
-            <li><strong>How will it be serviced?</strong> grid power vs. off-grid, well vs. municipal water, septic vs. sewer.</li>
-            <li><strong>What is the unit spec?</strong> insulation details, windows/doors, air/vapor layers, electrical system approvals.</li>
-          </ul>
-          <p class="small muted">
-            If you’re still deciding what to buy, start with <a href="/best-prefab-homes-canada/">Best prefab homes (Top 7)</a>,
-            then come back here to price the real install.
-          </p>
-        </div>
+    <div class="noteBox">
+      <h3 class="h3">Before you collect quotes, collect answers</h3>
+      <ul class="specs">
+        <li><strong>Where is the site?</strong> municipality + property type + intended use (seasonal vs. year-round).</li>
+        <li><strong>How will it be placed?</strong> slab, piers, frost wall, basement, engineered pad.</li>
+        <li><strong>How will it be serviced?</strong> grid power vs. off-grid, well vs. municipal water, septic vs. sewer.</li>
+        <li><strong>What is the unit spec?</strong> insulation details, windows/doors, air/vapor layers, electrical system approvals.</li>
+      </ul>
+      <p class="small muted">
+        If you’re still deciding what to buy, start with <a href="/best-prefab-homes-canada/">Best prefab homes (Top 7)</a>,
+        then come back here to price the real install.
+      </p>
+    </div>
 
-        <div class="grid">
+    <div class="grid">
 
-          <div class="card grid-span-6">
-            <h3>A) Delivery, offload, and placement</h3>
-            <p class="small muted">Often underestimated because it depends on access.</p>
-            <ul class="specs">
-              <li><strong>What drives it:</strong> distance, road restrictions, site access, crane/telehandler needs, staging area.</li>
-              <li><strong>Ask the seller:</strong> shipping dimensions/weight, offload requirements, recommended equipment.</li>
-              <li><strong>Ask the carrier/installer:</strong> access constraints, turning radius, overhead wires, ground conditions.</li>
-            </ul>
-          </div>
-
-          <div class="card grid-span-6">
-            <h3>B) Site prep and drainage</h3>
-            <p class="small muted">This is where “simple land” becomes a real build site.</p>
-            <ul class="specs">
-              <li><strong>What drives it:</strong> clearing, grading, driveway/base, drainage, erosion control, culverts.</li>
-              <li><strong>Ask your installer:</strong> minimum pad specs, drainage approach, runoff management.</li>
-              <li><strong>Canada note:</strong> freeze/thaw + drainage is not optional for long-term durability.</li>
-            </ul>
-          </div>
-
-          <div class="card grid-span-6">
-            <h3>C) Foundation / base system</h3>
-            <p class="small muted">The “anchor” of installed cost and compliance.</p>
-            <ul class="specs">
-              <li><strong>Common options:</strong> slab-on-grade, piers, frost-protected systems, basement, engineered pad.</li>
-              <li><strong>What drives it:</strong> frost depth, soil, slope, loads, local requirements, engineer involvement.</li>
-              <li><strong>Ask for:</strong> stamped drawings/engineering needs (if any) and installation instructions.</li>
-            </ul>
-          </div>
-
-          <div class="card grid-span-6">
-            <h3>D) Permits, approvals, and inspections</h3>
-            <p class="small muted">This isn’t “paperwork,” it’s your permission to build and connect systems.</p>
-            <ul class="specs">
-              <li><strong>What drives it:</strong> zoning, building permit, electrical inspection, plumbing inspection, occupancy rules.</li>
-              <li><strong>Ask the municipality:</strong> required drawings, minimum standards, use type restrictions.</li>
-              <li><strong>Ask the seller:</strong> what documentation they provide for permitting.</li>
-            </ul>
-          </div>
-
-          <div class="card grid-span-6">
-            <h3>E) Electrical: connection + compliance</h3>
-            <p class="small muted">A unit can be “wired” but still not “approval-ready.”</p>
-            <ul class="specs">
-              <li><strong>What drives it:</strong> service size, panel readiness, inspection requirements, distance to connection point.</li>
-              <li><strong>Ask for:</strong> evidence of approvals/certifications applicable in Canada (if provided), wiring diagrams.</li>
-              <li><strong>Reality:</strong> if documentation is missing, you may need rewiring or upgrades to pass inspection.</li>
-            </ul>
-          </div>
-
-          <div class="card grid-span-6">
-            <h3>F) Plumbing: water supply + drainage</h3>
-            <p class="small muted">Plumbing is a system, not just pipes inside the unit.</p>
-            <ul class="specs">
-              <li><strong>What drives it:</strong> well vs. municipal, winterization approach, drain routing, venting, fixture specs.</li>
-              <li><strong>Ask for:</strong> plumbing layout, rough-in details, winterization instructions (if any).</li>
-              <li><strong>Canada note:</strong> freeze protection planning matters: lines, shutoffs, access panels, insulation.</li>
-            </ul>
-          </div>
-
-          <div class="card grid-span-6">
-            <h3>G) Septic / sewer connection</h3>
-            <p class="small muted">Often outside the listing conversation, always inside the installed cost.</p>
-            <ul class="specs">
-              <li><strong>What drives it:</strong> soil testing, system design, distance to field, permit/inspection steps.</li>
-              <li><strong>Ask locally:</strong> what tests and approvals are required before installation.</li>
-              <li><strong>Plan for:</strong> access for maintenance and setbacks from wells/waterways.</li>
-            </ul>
-          </div>
-
-          <div class="card grid-span-6">
-            <h3>H) Insulation, air/vapor control, and windows/doors</h3>
-            <p class="small muted">The envelope determines comfort, moisture risk, and heating needs.</p>
-            <ul class="specs">
-              <li><strong>Ask for:</strong> insulation type/thickness, air barrier details, vapor control strategy, window specs.</li>
-              <li><strong>Canada reality:</strong> condensation risk rises when envelope details are unclear or mismatched.</li>
-              <li><strong>Upgrade trigger:</strong> if the unit is designed for mild climates, envelope upgrades may be required.</li>
-            </ul>
-          </div>
-
-          <div class="card grid-span-6">
-            <h3>I) Heating, cooling, ventilation</h3>
-            <p class="small muted">Comfort and indoor air quality depend on a complete system plan.</p>
-            <ul class="specs">
-              <li><strong>What drives it:</strong> climate zone, insulation level, airtightness, ventilation approach.</li>
-              <li><strong>Ask for:</strong> how the unit is intended to be heated/cooled, and ventilation provisions.</li>
-              <li><strong>Canada note:</strong> ventilation matters in winter; humidity and condensation need a plan.</li>
-            </ul>
-          </div>
-
-          <div class="card grid-span-6">
-            <h3>J) Finish work and “missing pieces”</h3>
-            <p class="small muted">This is where “looks finished in photos” meets reality.</p>
-            <ul class="specs">
-              <li><strong>Examples:</strong> trims, sealants, flashing, underlayment, interior finish completion, cabinetry, fixtures.</li>
-              <li><strong>Ask for:</strong> a precise included-items list (line-by-line), not a marketing paragraph.</li>
-              <li><strong>Tip:</strong> confirm who supplies fasteners, sealants, and weatherproofing details.</li>
-            </ul>
-          </div>
-
-          <div class="card grid-span-6">
-            <h3>K) Insurance, warranty, and risk buffer</h3>
-            <p class="small muted">Not a “cost bucket” you want to discover late.</p>
-            <ul class="specs">
-              <li><strong>Ask:</strong> warranty terms in writing, who services issues, exclusions, and timelines.</li>
-              <li><strong>Consider:</strong> builder/installer insurance and what your own insurer requires.</li>
-              <li><strong>Reality:</strong> unclear responsibility can become the costliest part of a project.</li>
-            </ul>
-          </div>
-
-        </div>
-
-        <div class="noteBox">
-          <h3 class="h3">The documentation test (quick filter)</h3>
-          <p class="sub">
-            If a seller can’t provide documentation for the unit, assume you will pay to create it, verify it, or modify the unit to meet requirements.
-          </p>
-          <ul class="specs">
-            <li><strong>Ask for:</strong> drawings/spec sheets, insulation details, electrical documentation, structural load claims support.</li>
-            <li><strong>If they refuse or dodge:</strong> treat the listing as “unknown spec” and plan accordingly.</li>
-          </ul>
-        </div>
-
+      <div class="card grid-span-6">
+        <h3 class="h3icon"><span class="ico" aria-hidden="true">🚚</span>A) Delivery, offload, and placement</h3>
+        <p class="small muted">Often underestimated because it depends on access.</p>
+        <ul class="specs">
+          <li><strong>What drives it:</strong> distance, road restrictions, site access, crane/telehandler needs, staging area.</li>
+          <li><strong>Ask the seller:</strong> shipping dimensions/weight, offload requirements, recommended equipment.</li>
+          <li><strong>Ask the carrier/installer:</strong> access constraints, turning radius, overhead wires, ground conditions.</li>
+        </ul>
       </div>
-    </section>
 
-    <div class="wrap"><div class="sep"></div></div>
+      <div class="card grid-span-6">
+        <h3 class="h3icon"><span class="ico" aria-hidden="true">🧭</span>B) Site prep and drainage</h3>
+        <p class="small muted">This is where “simple land” becomes a real build site.</p>
+        <ul class="specs">
+          <li><strong>What drives it:</strong> clearing, grading, driveway/base, drainage, erosion control, culverts.</li>
+          <li><strong>Ask your installer:</strong> minimum pad specs, drainage approach, runoff management.</li>
+          <li><strong>Canada note:</strong> freeze/thaw + drainage is not optional for long-term durability.</li>
+        </ul>
+      </div>
+
+      <div class="card grid-span-6">
+        <h3 class="h3icon"><span class="ico" aria-hidden="true">🧱</span>C) Foundation / base system</h3>
+        <p class="small muted">The “anchor” of installed cost and compliance.</p>
+        <ul class="specs">
+          <li><strong>Common options:</strong> slab-on-grade, piers, frost-protected systems, basement, engineered pad.</li>
+          <li><strong>What drives it:</strong> frost depth, soil, slope, loads, local requirements, engineer involvement.</li>
+          <li><strong>Ask for:</strong> stamped drawings/engineering needs (if any) and installation instructions.</li>
+        </ul>
+      </div>
+
+      <div class="card grid-span-6">
+        <h3 class="h3icon"><span class="ico" aria-hidden="true">🪪</span>D) Permits, approvals, and inspections</h3>
+        <p class="small muted">This isn’t “paperwork,” it’s your permission to build and connect systems.</p>
+        <ul class="specs">
+          <li><strong>What drives it:</strong> zoning, building permit, electrical inspection, plumbing inspection, occupancy rules.</li>
+          <li><strong>Ask the municipality:</strong> required drawings, minimum standards, use type restrictions.</li>
+          <li><strong>Ask the seller:</strong> what documentation they provide for permitting.</li>
+        </ul>
+      </div>
+
+      <div class="card grid-span-6">
+        <h3 class="h3icon"><span class="ico" aria-hidden="true">⚡</span>E) Electrical: connection + compliance</h3>
+        <p class="small muted">A unit can be “wired” but still not “approval-ready.”</p>
+        <ul class="specs">
+          <li><strong>What drives it:</strong> service size, panel readiness, inspection requirements, distance to connection point.</li>
+          <li><strong>Ask for:</strong> evidence of approvals/certifications applicable in Canada (if provided), wiring diagrams.</li>
+          <li><strong>Reality:</strong> if documentation is missing, you may need rewiring or upgrades to pass inspection.</li>
+        </ul>
+      </div>
+
+      <div class="card grid-span-6">
+        <h3 class="h3icon"><span class="ico" aria-hidden="true">🚰</span>F) Plumbing: water supply + drainage</h3>
+        <p class="small muted">Plumbing is a system, not just pipes inside the unit.</p>
+        <ul class="specs">
+          <li><strong>What drives it:</strong> well vs. municipal, winterization approach, drain routing, venting, fixture specs.</li>
+          <li><strong>Ask for:</strong> plumbing layout, rough-in details, winterization instructions (if any).</li>
+          <li><strong>Canada note:</strong> freeze protection planning matters: lines, shutoffs, access panels, insulation.</li>
+        </ul>
+      </div>
+
+      <div class="card grid-span-6">
+        <h3 class="h3icon"><span class="ico" aria-hidden="true">🛠️</span>G) Septic / sewer connection</h3>
+        <p class="small muted">Often outside the listing conversation, always inside the installed cost.</p>
+        <ul class="specs">
+          <li><strong>What drives it:</strong> soil testing, system design, distance to field, permit/inspection steps.</li>
+          <li><strong>Ask locally:</strong> what tests and approvals are required before installation.</li>
+          <li><strong>Plan for:</strong> access for maintenance and setbacks from wells/waterways.</li>
+        </ul>
+      </div>
+
+      <div class="card grid-span-6">
+        <h3 class="h3icon"><span class="ico" aria-hidden="true">🪟</span>H) Insulation, air/vapor control, and windows/doors</h3>
+        <p class="small muted">The envelope determines comfort, moisture risk, and heating needs.</p>
+        <ul class="specs">
+          <li><strong>Ask for:</strong> insulation type/thickness, air barrier details, vapor control strategy, window specs.</li>
+          <li><strong>Canada reality:</strong> condensation risk rises when envelope details are unclear or mismatched.</li>
+          <li><strong>Upgrade trigger:</strong> if the unit is designed for mild climates, envelope upgrades may be required.</li>
+        </ul>
+      </div>
+
+      <div class="card grid-span-6">
+        <h3 class="h3icon"><span class="ico" aria-hidden="true">🌬️</span>I) Heating, cooling, ventilation</h3>
+        <p class="small muted">Comfort and indoor air quality depend on a complete system plan.</p>
+        <ul class="specs">
+          <li><strong>What drives it:</strong> climate zone, insulation level, airtightness, ventilation approach.</li>
+          <li><strong>Ask for:</strong> how the unit is intended to be heated/cooled, and ventilation provisions.</li>
+          <li><strong>Canada note:</strong> ventilation matters in winter; humidity and condensation need a plan.</li>
+        </ul>
+      </div>
+
+      <div class="card grid-span-6">
+        <h3 class="h3icon"><span class="ico" aria-hidden="true">🧰</span>J) Finish work and “missing pieces”</h3>
+        <p class="small muted">This is where “looks finished in photos” meets reality.</p>
+        <ul class="specs">
+          <li><strong>Examples:</strong> trims, sealants, flashing, underlayment, interior finish completion, cabinetry, fixtures.</li>
+          <li><strong>Ask for:</strong> a precise included-items list (line-by-line), not a marketing paragraph.</li>
+          <li><strong>Tip:</strong> confirm who supplies fasteners, sealants, and weatherproofing details.</li>
+        </ul>
+      </div>
+
+      <div class="card grid-span-6">
+        <h3 class="h3icon"><span class="ico" aria-hidden="true">🛡️</span>K) Insurance, warranty, and risk buffer</h3>
+        <p class="small muted">Not a “cost bucket” you want to discover late.</p>
+        <ul class="specs">
+          <li><strong>Ask:</strong> warranty terms in writing, who services issues, exclusions, and timelines.</li>
+          <li><strong>Consider:</strong> builder/installer insurance and what your own insurer requires.</li>
+          <li><strong>Reality:</strong> unclear responsibility can become the costliest part of a project.</li>
+        </ul>
+      </div>
+
+    </div>
+
+    <div class="noteBox">
+      <h3 class="h3">The documentation test (quick filter)</h3>
+      <p class="sub">
+        If a seller can’t provide documentation for the unit, assume you will pay to create it, verify it, or modify the unit to meet requirements.
+      </p>
+      <ul class="specs">
+        <li><strong>Ask for:</strong> drawings/spec sheets, insulation details, electrical documentation, structural load claims support.</li>
+        <li><strong>If they refuse or dodge:</strong> treat the listing as “unknown spec” and plan accordingly.</li>
+      </ul>
+    </div>
+
+  </div>
+</section>
+
+<div class="wrap"><div class="sep"></div></div>
 
     <!-- SCENARIOS -->
     <section id="scenarios" class="section anchor">
