--- a/cost-of-prefab-home-canada/index.html
+++ b/cost-of-prefab-home-canada/index.html
@@ -960,7 +960,8 @@
         <span>© <span id="y"></span> PrefabHomesCanada</span>
         <span class="footerDot" aria-hidden="true">•</span>
         <a href="/privacy-policy/">Privacy policy</a>
-        <a href="/disclosure/">Disclosure</a>.
+        <span class="footerDot" aria-hidden="true">•</span>
+        <a href="/disclosure/">Disclosure</a>
         <span class="footerDot" aria-hidden="true">•</span>
         <span class="footerMuted">Listings can change. Verify documentation before purchase.</span>
       </div>
