--- a/cost-of-prefab-home-canada/index.html
+++ b/cost-of-prefab-home-canada/index.html
@@ -223,13 +223,10 @@
 
       <nav class="nav" id="nav" aria-label="Primary">
         <a href="/best-prefab-homes-canada/">Guides</a>
-        <a href="/permits-by-province/">Permits by province</a>
-        <a href="/foundation-options-canada/">Foundation options</a>
+        <a href="/permits-by-province/">Permits/a>
+        <a href="/foundation-options-canada/">Foundation</a>
         <a href="/winterization-prefab/">Winterization</a>
-        <a href="/how-we-test/">How we test</a>
-        <a href="/methodology/">Methodology</a>
         <a href="/about/">About</a>
-        <a href="/disclosure/">Disclosure</a>
       </nav>
 
       <div class="header-cta">
