--- a/cost-of-prefab-home-canada/index.html
+++ b/cost-of-prefab-home-canada/index.html
@@ -223,7 +223,7 @@
 
       <nav class="nav" id="nav" aria-label="Primary">
         <a href="/best-prefab-homes-canada/">Guides</a>
-        <a href="/permits-by-province/">Permits/a>
+        <a href="/permits-by-province/">Permits</a>
         <a href="/foundation-options-canada/">Foundation</a>
         <a href="/winterization-prefab/">Winterization</a>
         <a href="/about/">About</a>
