--- a/index.html
+++ b/index.html
@@ -391,28 +391,27 @@
       </div>
 
       <nav class="footerNav" aria-label="Footer">
-        <p class="footerTitle small">Site</p>
+  <p class="footerTitle small">Site</p>
 
-        <ul class="footerLinksGrid">
-          <li><a href="/best-prefab-homes-canada/">Best prefab homes</a></li>
-          <li><a href="/cost-of-prefab-home-canada/">Cost of prefab homes</a></li>
+  <ul class="footerLinksGrid">
+    <li><a href="/best-prefab-homes-canada/">Best prefab homes</a></li>
+    <li><a href="/cost-of-prefab-home-canada/">Cost (2026)</a></li>
+    <li><a href="/permits-by-province/">Permits by province</a></li>
+    <li><a href="/foundation-options-canada/">Foundation options</a></li>
+    <li><a href="/winterization-prefab/">Winterization</a></li>
 
-          <li><a href="/how-we-test/">How we test</a></li>
-          <li><a href="/methodology/">Methodology</a></li>
-
-          <li><a href="/about/">About</a></li>
-          <li><a href="/disclosure/">Disclosure</a></li>
-
-          <li><a href="/privacy-policy/">Privacy policy</a></li>
-        </ul>
-      </nav>
-    </div>
+    <li><a href="/how-we-test/">How we test</a></li>
+    <!-- OR replace with: <li><a href="/methodology/">Methodology</a></li> -->
+  </ul>
+</nav>
 
     <div class="wrap footerBottom">
       <div class="footerLegal small">
         <span>© <span id="y"></span> PrefabHomesCanada</span>
         <span class="footerDot" aria-hidden="true">•</span>
         <a href="/privacy-policy/">Privacy policy</a>
+        <span class="footerDot" aria-hidden="true">•</span>
+        <a href="/about/">About</a>
         <span class="footerDot" aria-hidden="true">•</span>
         <span class="footerMuted">Listings can change. Verify documentation before purchase.</span>
       </div>
