--- a/index.html
+++ b/index.html
@@ -411,6 +411,8 @@
         <span class="footerDot" aria-hidden="true">•</span>
         <a href="/privacy-policy/">Privacy policy</a>
         <span class="footerDot" aria-hidden="true">•</span>
+        <a href="/disclosure/">Disclosure</a>
+        <span class="footerDot" aria-hidden="true">•</span>
         <a href="/about/">About</a>
         <span class="footerDot" aria-hidden="true">•</span>
         <span class="footerMuted">Listings can change. Verify documentation before purchase.</span>
