--- a/winterization-prefab/index.html
+++ b/winterization-prefab/index.html
@@ -23,6 +23,9 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">
 
+  <!-- Optional perf -->
+  <link rel="preconnect" href="https://prefabhomescanada.github.io" crossorigin>
+
   <!-- Shared CSS -->
   <link rel="stylesheet" href="/assets/css/styles.css">
 
@@ -782,6 +785,8 @@
         <a href="/privacy-policy/">Privacy policy</a>
         <span class="footerDot" aria-hidden="true">•</span>
         <a href="/disclosure/">Disclosure</a>
+        <span class="footerDot" aria-hidden="true">•</span>
+        <a href="/about/">About</a>
         <span class="footerDot" aria-hidden="true">•</span>
         <span class="footerMuted">Winter performance depends on specs + install. Verify before purchase.</span>
       </div>
