--- a/foundation-options-canada/index.html
+++ b/foundation-options-canada/index.html
@@ -275,15 +275,15 @@
             <figure class="hero-figure" style="margin:0;">
               <picture>
                 <source type="image/webp"
-                  srcset="/assets/images/hero/foundation-options-canada-1600x900.webp 1600w,
-                          /assets/images/hero/foundation-options-canada-2400x1350.webp 2400w"
+                  srcset="/assets/images/hero/prefab-foundation-canada-hero-1600x900.webp 1600w,
+                          /assets/images/hero/prefab-foundation-canada-hero-2400x1350.webp 2400w"
                   sizes="(max-width: 979px) 100vw, 40vw">
                 <img
                   class="hero-img"
-                  src="/assets/images/hero/foundation-options-canada-1600x900.webp"
+                  src="/assets/images/hero/prefab-foundation-canada-hero-1600x900.webp"
                   width="1600"
                   height="900"
-                  alt="Foundation options for prefab homes in Canada — slab, piers, frost-protected systems (2026)"
+                  alt="Concrete slab foundation for a prefab home in Canada with proper drainage and frost protection"
                   loading="eager"
                   decoding="async"
                   fetchpriority="high"
