--- a/foundation-options-canada/index.html
+++ b/foundation-options-canada/index.html
@@ -43,7 +43,7 @@
   <meta property="og:image" content="https://prefabhomescanada.github.io/assets/images/og/prefab-foundation-canada-og-1200x630.webp">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
-  <meta property="og:image:alt" content="Foundation options for prefab homes in Canada — slab vs piers vs frost-protected (2026)">
+  <meta property="og:image:alt" content="alt="Concrete slab foundation for a prefab home in Canada with proper drainage and frost protection"">
   <meta property="og:image:type" content="image/webp">
   <meta property="article:published_time" content="2026-01-01">
   <meta property="article:modified_time" content="2026-01-01">
