--- a/foundation-options-canada/index.html
+++ b/foundation-options-canada/index.html
@@ -678,6 +678,8 @@
         <span class="footerDot" aria-hidden="true">•</span>
         <a href="/disclosure/">Disclosure</a>
         <span class="footerDot" aria-hidden="true">•</span>
+        <a href="/about/">About</a>
+        <span class="footerDot" aria-hidden="true">•</span>
         <span class="footerMuted">Foundations depend on site + local rules. Confirm before purchase.</span>
       </div>
 
