--- a/permits-by-province/index.html
+++ b/permits-by-province/index.html
@@ -771,6 +771,8 @@
         <span class="footerDot" aria-hidden="true">•</span>
         <a href="/disclosure/">Disclosure</a>
         <span class="footerDot" aria-hidden="true">•</span>
+        <a href="/about/">About</a>
+        <span class="footerDot" aria-hidden="true">•</span>
         <span class="footerMuted">Requirements vary locally. Confirm with your municipality.</span>
       </div>
 
