--- a/cost-of-prefab-home-canada/index.html
+++ b/cost-of-prefab-home-canada/index.html
@@ -764,10 +764,10 @@
         <input type="text" name="_gotcha" tabindex="-1" autocomplete="off" aria-hidden="true" style="display:none">
 
         <!-- Backup redirect (JS already forces /thank-you/) -->
-        <input type="hidden" name="_next" value="https://prefabhomescanada.github.io/thank-you/">
+        <input type="hidden" name="_next" value="/thank-you/">
 
         <!-- Inline status (JS will show success/error here) -->
-        <div class="formStatus" id="formStatus" aria-live="polite" hidden></div>
+        <div class="formStatus" aria-live="polite" hidden></div>
 
         <p class="small muted" style="margin-top:10px;">
           No spam. Planning reply only. See <a href="/privacy-policy/">Privacy policy</a>.
