--- a/permits-by-province/index.html
+++ b/permits-by-province/index.html
@@ -208,23 +208,13 @@
 
       <!-- Keep this nav consistent site-wide -->
       <nav class="nav" id="nav" aria-label="Primary">
-        <a href="/best-prefab-homes-canada/">Guides</a>
-        <a href="/permits-by-province/" aria-current="page">Permits</a>
-        <a href="/foundation-options-canada/">Foundation</a>
-        <a href="/winterization-prefab/">Winterization</a>
-        <a href="/about/">About</a>
-
-        <details class="navMore">
-          <summary class="navMoreBtn">More</summary>
-          <div class="navMoreMenu" role="menu">
-            <a role="menuitem" href="/how-we-test/">How we test</a>
-            <a role="menuitem" href="/methodology/">Methodology</a>
-            <a role="menuitem" href="/disclosure/">Disclosure</a>
-            <a role="menuitem" href="/privacy-policy/">Privacy policy</a>
-          </div>
-        </details>
-      </nav>
-
+  <a href="/best-prefab-homes-canada/">Guides</a>
+  <a href="/permits-by-province/" aria-current="page">Permits</a>
+  <a href="/foundation-options-canada/">Foundation</a>
+  <a href="/winterization-prefab/">Winterization</a>
+  <a href="/about/">About</a>
+</nav>
+      
       <div class="header-cta">
         <a class="btn btn-primary" href="/best-prefab-homes-canada/">See the Top 7</a>
       </div>
@@ -457,7 +447,7 @@
           </ul>
         </div>
 
-        <div class="tableWrap" role="region" aria-label="Permitting overview table" tabindex="0">
+        <div class="table-wrap" role="region" aria-label="Permitting overview table" tabindex="0">
           <table class="table">
             <thead>
               <tr>
